Исправлен модуль Lambda